# sensor_db_mcp_server_demo

./: .gitignore  README.md  mcp_server.py  pyproject.toml
data/: sensor_readings.db
src/: chart.py  database.py
