[project]
name = "sensor-db-mcp-server-demo"
version = "0.1.0"
description = "A simple mcp server with access to a SQL database with sensor readings, and some charting capabilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.8.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
]
